--- a/css/master.css
+++ b/css/master.css
@@ -10,7 +10,24 @@ textarea {
 
 }
 
+i.fa {
+  font-size: 1.5em;
+  color: #999;
+}
+
+.header_title {
+  color: rgb(30, 115, 190);
+  font-weight: 600;
+  margin: 0;
+}
+
+.header_description {
+  margin: 1% 0% 5% 0%;
+  font-weight: 600;
+}
+
 .proposalBlock {
+  margin-top: 6%;
   padding: 7%;
   background-color: #ffffff;
   box-shadow: 0px 17px 24px 0px rgba(0, 0, 0, 0.16);
@@ -38,6 +55,12 @@ textarea {
 
 #createProposalForm {
    margin-top:1em;
+}
+
+#lang_box {
+  width: 82px;
+  position: relative;
+  top: -4px;
 }
 
 #payment_amount {
