--- a/css/master.css
+++ b/css/master.css
@@ -27,8 +27,60 @@ i.fa {
   font-weight: 600;
 }
 
+.nav-tabs {
+  display: inline-block;
+	border: none;
+
+	/*& > li {
+		& > a {
+			outline: none;
+			border: none !important;
+			background-color: transparent;
+
+			&:not(.active):hover {
+				border-bottom: 2px solid $dropdown-link-hover-bg !important;
+			}
+		}
+
+		&.active > a,
+		&.active > a:hover {
+			border-bottom: 2px solid $btn-default-border !important;
+		}
+	}*/
+}
+
+.nav-tabs>li>a {
+  font-size: 1.2em;
+  color: rgb(30, 115, 190);
+  border: none;
+}
+
+.nav-tabs>li.active>a {
+  border: none;
+  color: #ffffff;
+  background-color: rgb(30, 115, 190);
+  border-radius: 999px;
+}
+
+.nav-tabs>li.active>a:link {
+  border: none;
+}
+
+.nav-tabs>li.active>a:hover {
+  background-color: #eee;
+}
+
+.nav-tabs>li>a:hover {
+  background-color: #eee;
+  border-radius: 999px;
+}
+
+.nav-tabs>li>a:active {
+  background-color: rgb(30, 115, 190);
+}
+
 .proposalBlock {
-  margin-top: 6%;
+  /*margin-top: 6%;*/
   padding: 7%;
   background-color: #ffffff;
   box-shadow: 0px 17px 24px 0px rgba(0, 0, 0, 0.16);
