--- a/css/master.css
+++ b/css/master.css
@@ -33,18 +33,32 @@ i.fa {
   width: 100%;
 }
 
+.nav-tabs>li {
+  margin-right: 5%;
+}
+
 .nav-tabs>li>a {
   font-size: 1.2em;
   color: #000000;
   border: none;
   margin-right: 99px;
+  border-radius: 100%;
+  height: 40px;
+  width: 40px;
+  margin-bottom: 5%;
+  margin: 0 auto;
+  background-color: #ccc;
 }
 
 .nav-tabs>li.active>a {
   border: none;
-  color: #ffffff;
+  color: #000000;
   background-color: rgb(30, 115, 190);
-  border-radius: 4px;
+  border-radius: 100%;
+  height: 40px;
+  width: 40px;
+  margin-bottom: 5%;
+  margin: 0 auto;
 }
 
 .nav-tabs>li.active>a:link {
@@ -53,12 +67,19 @@ i.fa {
 
 .nav-tabs>li.active>a:hover {
   background-color: rgb(30, 115, 190);
-  color: #ffffff;
+  border-radius: 100%;
+  height: 40px;
+  width: 40px;
+  margin-bottom: 5%;
 }
 
 .nav-tabs>li>a:hover {
-  background-color: transparent;
-  border-radius: 4px;
+  background-color: #ccc;
+  border-radius: 100%;
+  height: 40px;
+  width: 40px;
+  margin-bottom: 5%;
+  margin: 0 auto;
 }
 
 .nav-tabs>li>a:active {
