--- a/css/master.css
+++ b/css/master.css
@@ -27,63 +27,12 @@ i.fa {
   font-weight: 600;
 }
 
-.nav-tabs {
-  display: inline-block;
-	border: none;
-  width: 100%;
+.input-spacing {
+  margin: 5%;
 }
 
-.nav-tabs>li {
-  margin-right: 5%;
-}
-
-.nav-tabs>li>a {
-  font-size: 1.2em;
-  color: #000000;
-  border: none;
-  margin-right: 99px;
-  border-radius: 100%;
-  height: 40px;
-  width: 40px;
-  margin-bottom: 5%;
-  margin: 0 auto;
-  background-color: #ccc;
-}
-
-.nav-tabs>li.active>a {
-  border: none;
-  color: #000000;
-  background-color: rgb(30, 115, 190);
-  border-radius: 100%;
-  height: 40px;
-  width: 40px;
-  margin-bottom: 5%;
-  margin: 0 auto;
-}
-
-.nav-tabs>li.active>a:link {
-  border: none;
-}
-
-.nav-tabs>li.active>a:hover {
-  background-color: rgb(30, 115, 190);
-  border-radius: 100%;
-  height: 40px;
-  width: 40px;
-  margin-bottom: 5%;
-}
-
-.nav-tabs>li>a:hover {
-  background-color: #ccc;
-  border-radius: 100%;
-  height: 40px;
-  width: 40px;
-  margin-bottom: 5%;
-  margin: 0 auto;
-}
-
-.nav-tabs>li>a:active {
-  background-color: rgb(30, 115, 190);
+.progress {
+  margin-top: 2%;
 }
 
 .proposalBlock {
