--- a/css/master.css
+++ b/css/master.css
@@ -25,6 +25,7 @@ i.fa {
 .header_description {
   margin: 1% 0% 5% 0%;
   font-weight: 600;
+  line-height:1.5em;
 }
 
 .input-spacing {
@@ -32,11 +33,15 @@ i.fa {
 }
 
 .progress {
-  margin-top: 2%;
+  margin-top: 10px;
+}
+
+.tab-content {
+  margin-top:40px;
 }
 
 .proposalBlock {
-  padding: 7%;
+  padding: 5% 5% 2% 5%;
   background-color: #ffffff;
   box-shadow: 0px 17px 24px 0px rgba(0, 0, 0, 0.16);
 }
