--- a/css/master.css
+++ b/css/master.css
@@ -142,7 +142,7 @@ i.fa {
 #walletCommandsSubmit {
   margin-top:2em;
 }
-.nav>li>a {
+.nav>li.active>a {
   border-radius: 4px;
   border: 0px solid;
   padding: 5px 15px;
@@ -159,7 +159,7 @@ i.fa {
   -webkit-transition: all .2s ease;
   transition: all .2s ease;
 }
-.nav>li>a:hover{
+.nav>li.active>a:hover{
   background-color: #1e7dc9;
   transform: translateY(-1px);
   box-shadow: 0 7px 14px rgba(50,50,93,0.1), 0 3px 6px rgba(0,0,0,0.08);
@@ -208,6 +208,6 @@ a:visited {
 }
 
 a:hover {
-  color: #3b9ce9
+  color: #3b9ce9;
   text-decoration: none;
 }
